@@ -46,6 +46,7 @@ importFrom(BiocGenerics,rbind)
 importFrom(BiocGenerics,rownames)
 importFrom(BiocGenerics,sizeFactors)
 importFrom(BiocNeighbors,KmknnParam)
+importFrom(BiocNeighbors,findMutualNN)
 importFrom(BiocNeighbors,queryKNN)
 importFrom(BiocParallel,SerialParam)
 importFrom(BiocParallel,bpstart)
