@@ -1,0 +1,16 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/findMutualNN.R
+\docType{import}
+\name{reexports}
+\alias{reexports}
+\alias{findMutualNN}
+\title{Objects exported from other packages}
+\keyword{internal}
+\description{
+These objects are imported from other packages. Follow the links
+below to see their documentation.
+
+\describe{
+  \item{BiocNeighbors}{\code{\link[BiocNeighbors]{findMutualNN}}}
+}}
+
